--- a/Frontend/EDUFAM/package.json
+++ b/Frontend/EDUFAM/package.json
@@ -14,7 +14,9 @@
     "@splinetool/react-spline": "^4.1.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
+    "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.2",
     "eslint": "^9.33.0",
