--- a/Frontend/EDUFAM/package.json
+++ b/Frontend/EDUFAM/package.json
@@ -14,10 +14,12 @@
     "@splinetool/react-spline": "^4.1.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2"
   },
