--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
+  "version": 2,
   "buildCommand": "cd Frontend/EDUFAM && npm install && npm run build",
   "outputDirectory": "Frontend/EDUFAM/dist",
   "framework": "vite",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/[^.]+",
-      "dest": "/",
-      "status": 200
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
