--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "version": 2,
   "buildCommand": "cd Frontend/EDUFAM && npm install && npm run build",
-  "outputDirectory": "Frontend/EDUFAM/dist",
+  "outputDirectory": "dist",
   "framework": "vite",
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+  "destination": "/dist/index.html"
     }
   ]
 }
